--- a/styles/app.scss
+++ b/styles/app.scss
@@ -8,12 +8,18 @@
 body {
   margin: 0;
 }
+a {
+  text-decoration: none;
+}
+img {
+  width: 100%;
+}
 .topbar {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 2rem;
 }
 .logo {
   font-family: 'Work Sans', sans-serif;
@@ -24,8 +30,9 @@ body {
 }
 .contact-parent {
   display: flex;
-  width: 18%;
+  width: 19%;
   justify-content: space-between;
+  align-items: center;
 }
 
 @media screen and (max-width: 760px) {
@@ -56,4 +63,52 @@ body {
   min-height: 20rem;
   background: url('/img/landing.jpg')center center no-repeat;
   background-size: cover;
+
+}
+.white {
+  color: #fff;
+}
+.black {
+  color: black;
+}
+.small {
+  font-size: 1.5rem;
+}
+
+.large {
+  font-size: 4rem;
+}
+.zeromargin {
+  margin: 0;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.topbar-mailto {
+  // border: solid black 2px;
+
+}
+.product-list {
+  display: flex;
+  width: 90%;
+  margin: auto;
+}
+.product {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+
+}
+.product-image {
+  width: 100%;
+}
+.heading {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 3rem;
+  font-size: 2rem;
 }
